updating the all end point request body in OpenAPI
